--- a/apps/web/src/pages/paiement-termine/index.astro
+++ b/apps/web/src/pages/paiement-termine/index.astro
@@ -26,7 +26,7 @@ const MAIL = "redaction@frustrationmagazine.fr";
     {
       mode === "payment" ? (
         <>
-          <p class="mb-3 text-balance">
+          <p class="mb-3 text-pretty">
             Votre don de soutien a bien été reçu ! 🎉 Nous avons hâte de vous
             partager tous les projets que nous vous préparons pour 2025 !
           </p>
