✨ feat(web): add authors page

--- a/apps/web/src/layout/BaseLayout/Footer/components/MoreLinks.astro
+++ b/apps/web/src/layout/BaseLayout/Footer/components/MoreLinks.astro
@@ -18,6 +18,10 @@ const MORE_LINKS = [
     name: "Nos événements",
     url: "/evenements",
   },
+  {
+    name: "Qui sommes-nous ?",
+    url: "/auteurs",
+  },
 ];
 ---
 
