--- a/apps/web/src/layout/BaseLayout/BaseLayout.astro
+++ b/apps/web/src/layout/BaseLayout/BaseLayout.astro
@@ -7,6 +7,7 @@ import Header from "./Header/Header.astro";
 
 import "@fontsource/bakbak-one";
 import "@fontsource/bebas-neue";
+import "@fontsource/martel";
 import "@fontsource/montserrat/400.css";
 import "@fontsource/montserrat/600.css";
 import "@fontsource/open-sans/300.css";
