--- a/apps/web/src/pages/_components/ALaUne/Card.astro
+++ b/apps/web/src/pages/_components/ALaUne/Card.astro
@@ -2,7 +2,6 @@
 import { Image } from "astro:assets";
 import { FcCalendar } from "react-icons/fc";
 import { cn } from "@/lib/utils";
-import { getEntry, getCollection } from "astro:content";
 
 const {
   title,
@@ -76,20 +75,22 @@ let DD_MM_YYYY = new Date(date).toLocaleDateString("fr-FR", {
         <!-- Author and date -->
         <div
           class="hidden text-xs md:text-sm lg:text-base xs:flex items-center gap-1 font-open-sans text-white">
-          {
-            author?.avatar?.url ? (
-              <Image
-                title={author?.name}
-                alt={author?.name}
-                width="100"
-                height="100"
-                src={author?.avatar?.url}
-                class="mr-1 inline w-[15px] rounded-full"
-              />
-            ) : null
-          }
-          <span class="author">{author?.name}</span>
-          <span>|</span>
+          {author ? <Fragment>
+            {
+              author.avatar.url ? (
+                <Image
+                  title={author.name}
+                  alt={author.name}
+                  width="100"
+                  height="100"
+                  src={author.avatar.url}
+                  class="mr-1 inline w-[15px] rounded-full"
+                />
+              ) : null
+            }
+            <span class="author">{author.name}</span>
+            <span>|</span>
+          </Fragment> : null}
           <FcCalendar />
           <date class="date">{DD_MM_YYYY}</date>
         </div>
@@ -182,10 +183,10 @@ let DD_MM_YYYY = new Date(date).toLocaleDateString("fr-FR", {
         }
       }
 
-      if (document.body.clientWidth > 768) {
-        postCardWrapper?.addEventListener("mouseenter", handleMouseEnter);
-        postCardWrapper?.addEventListener("mousemove", handleMouseMove);
-        postCardWrapper?.addEventListener("mouseout", handleMouseOut);
+      if (document.body.clientWidth > 768 && postCardWrapper) {
+        postCardWrapper.addEventListener("mouseenter", handleMouseEnter);
+        postCardWrapper.addEventListener("mousemove", handleMouseMove);
+        postCardWrapper.addEventListener("mouseout", handleMouseOut);
       }
     }
   }
