--- a/apps/web/src/pages/_components/ALaUne/ALaUne.astro
+++ b/apps/web/src/pages/_components/ALaUne/ALaUne.astro
@@ -2,6 +2,7 @@
 import { cn } from "@/lib/utils";
 import SectionTitle from "../SectionTitle.astro";
 import Card from "./Card.astro";
+import AllArticles from "../AllArticles.astro";
 
 const { posts } = Astro.props;
 ---
@@ -26,20 +27,5 @@ const { posts } = Astro.props;
   <div class="wrapper w-full gap-4">
     {posts.map((post: any) => <Card {...post} />)}
   </div>
-  {/* ⬜ Tous les articles */}
-  <a
-    href="/posts"
-    class={cn(
-      "relative mx-auto mt-[5vh] w-fit block overflow-hidden rounded-[20px]",
-      "before:absolute before:h-full before:w-full before:animate-disco before:bg-[conic-gradient(#faf7c2,#FFF200,#898106)] before:blur-sm before:scale-x-10 before:scale-y-6",
-    )}>
-    <span
-      class={cn(
-        "relative m-1.5 block rounded-[13px] bg-black px-10 pb-3 pt-4 font-bebas  uppercase text-frustration-yellow ",
-        "text-4xl",
-        "md:text-5xl",
-      )}>
-      Tous les articles
-    </span>
-  </a>
+  <AllArticles label="Tous les articles" />
 </section>
