--- a/apps/web/src/pages/_components/Videos/Videos.astro
+++ b/apps/web/src/pages/_components/Videos/Videos.astro
@@ -8,6 +8,7 @@ import { Image } from "astro:assets";
 import { cn } from "@/lib/utils";
 import { LuExternalLink } from "react-icons/lu";
 import SidePanel from "./SidePanel.astro";
+import AllArticles from "../AllArticles.astro";
 
 const { data: records }: { data: any[] } = await readRecords({
   table: "media_video",
@@ -129,6 +130,7 @@ const { data: records }: { data: any[] } = await readRecords({
           </div>
         </div>
       </div>
+      <AllArticles category="videos" label="Toutes les vidéos" />
     </Section>
   )
 }
