✨ feat(dashboard): Improve event editor and force revalidation web page

--- a/apps/web/src/pages/evenements/index.astro
+++ b/apps/web/src/pages/evenements/index.astro
@@ -8,6 +8,8 @@ import { type Event } from "./_models";
 import VousNeDetestez from "./_assets/vous_ne_detestez_pas_le_lundi_compressed.webp";
 import { Image } from "astro:assets";
 
+export const prerender = false;
+
 const TITLE = "Évenements";
 const DESCRIPTION =
   "Liste des événements à venir autour de Frustration Magazine et Nicolas Framont";
