--- a/apps/web/src/styles/wordpress.css
+++ b/apps/web/src/styles/wordpress.css
@@ -1,5 +1,3 @@
-
-
 .content {
   --line-height: 1.7;
 
@@ -73,6 +71,7 @@
   font-size: calc(var(--font-size) * 1.25);
 }
 
+/* Blockquote */
 .content blockquote {
   border-left: 5px solid var(--yellow);
   padding-left: 1em;
@@ -84,9 +83,15 @@
   font-size: 20px;
 }
 
-.content strong {
+/* Chapo */
+.content p:has(strong) {
   font-weight: 900;
+  margin-bottom: 20px;
+  padding: 15px 20px;
+  background: linear-gradient(135deg, #fff5be 0%, #fbbf24 50%, #f7a71e 75%, #f3ad5c 100%);
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
 }
+/* --- */
 
 .content figure {
   margin: 30px 0;
@@ -138,4 +143,8 @@
 
 .content .twitter-tweet {
   margin: 20px auto;
+}
+
+.content hr {
+  display: none;
 }
