--- a/apps/web/src/layout/BaseLayout/BaseLayout.astro
+++ b/apps/web/src/layout/BaseLayout/BaseLayout.astro
@@ -18,7 +18,7 @@ import "@fontsource/roboto";
 
 import "./global.css";
 
-const DEFAULT_IMAGE = "/img/default.jpg";
+const DEFAULT_IMAGE = "/img/default.png";
 const DEFAULT_DESCRIPTION =
   "Frustration Magazine, média indépendant et offensif qui relate la guerre des classes.";
 
