--- a/apps/web/src/pages/_components/Separators/Spades.astro
+++ b/apps/web/src/pages/_components/Separators/Spades.astro
@@ -1,1 +1,1 @@
-<div class="absolute bottom-[-45px] h-[50px] w-full bg-spadesSeparation"></div>
+<div class="absolute bottom-[-45px] h-[50px] w-full bg-spades-separation"></div>
