🧹 chore(*): updated dependencies, unify Prettier configurations

--- a/apps/web/src/layout/BaseLayout/BaseLayout.astro
+++ b/apps/web/src/layout/BaseLayout/BaseLayout.astro
@@ -16,7 +16,7 @@ import "@fontsource/open-sans/700.css";
 import "@fontsource/parisienne";
 import "@fontsource/roboto";
 
-import "./global.css";
+import "../../styles/global.css";
 
 const DEFAULT_IMAGE = "/img/default.png";
 const DEFAULT_DESCRIPTION =
