--- a/apps/web/src/layout/BaseLayout/Header/banners/Banner.astro
+++ b/apps/web/src/layout/BaseLayout/Header/banners/Banner.astro
@@ -17,7 +17,7 @@ const prevMonth = new Date(currentDate.getFullYear(), currentDate.getMonth() - 1
 const firstDayOfCurrentMonth = getFirstDayOfTheMonth(currentDate);
 const firstDayOfPrevMonth = getFirstDayOfTheMonth(prevMonth);
 
-const SUBSCRIBERS_TARGET = 1500;
+const SUBSCRIBERS_TARGET = 2000;
 
 // 🔒 Gestion d'erreur pour éviter qu'une erreur de DB ne casse la page
 let subscribersLastMonth: number | null = null;
@@ -77,7 +77,7 @@ try {
             colors={{ first: "#fff200", second: "#fccf00" }}
             client:load
           >
-            1500
+            {SUBSCRIBERS_TARGET}
           </SparklesText>
         </div>
         {/* Déjà X abonnés ! */}
