💄 style(web): limit styled box to chapo only

--- a/apps/web/src/styles/wordpress.css
+++ b/apps/web/src/styles/wordpress.css
@@ -84,7 +84,7 @@
 }
 
 /* Chapo */
-.content p:has(strong) {
+.content p:has(strong):first-of-type {
   font-weight: 900;
   margin-bottom: 20px;
   padding: 15px 20px;
